Display (No title) for vacancies saved without a title

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -95,7 +95,10 @@
                                 <tr>
                                     <td>
                                         <div class="vac-title">
-                                            <a href="@Url.RouteUrl(RecruitmentRouteNames.EditVacancy, new { vacancyReferenceNumber = vacancy.VacancyReferenceNumber })" class="disp-block link-unimp">@vacancy.Title@*<span class="inl-block">(? applications)</span>*@</a>
+                                            @{
+                                                var title = string.IsNullOrEmpty(vacancy.Title) ? "(No Title)" : vacancy.Title;
+                                            }
+                                            <a href="@Url.RouteUrl(RecruitmentRouteNames.EditVacancy, new {vacancyReferenceNumber = vacancy.VacancyReferenceNumber})" class="disp-block link-unimp">@title@*<span class="inl-block">(? applications)</span>*@</a>
                                         </div>
                                         <span>@vacancy.ProviderSiteEmployerLink.Employer.Name</span>
                                     </td>
