Remove "Provider details" from title bar

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_LoginPartial.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
         {
             <div>
                 <a class="account-link" id="applicationsLink" href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Home</a>
-                <a class="account-link" id="applicationsLink" href="@Url.RouteUrl(RecruitmentRouteNames.ManageProviderSites)">Provider details</a>
+                <!--<a class="account-link" id="applicationsLink" href="@Url.RouteUrl(RecruitmentRouteNames.ManageProviderSites)">Provider details</a>-->
                 <!--<a class="" id="applicationsLink" href="user-info.html">Contact details</a>-->
             </div>
         }
