--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -8,8 +8,8 @@
     <div class="grid-wrapper">
         <div class="grid grid-2-3">
             <div class="hgroup text">
-                <h1 class="heading-xlarge" id="vacancy-title" itemprop="title">@Model.Title (Preview)</h1>
-                <p class="subtitle" id="vacancy-subtitle-employer-name" itemprop="hiringOrganization">@Model.ProviderSiteEmployerLink.Employer.Name</p>
+                <h1 class="heading-xlarge" id="vacancy-title" itemprop="title">@Model.NewVacancyViewModel.Title (Preview)</h1>
+                <p class="subtitle" id="vacancy-subtitle-employer-name" itemprop="hiringOrganization">@Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Name</p>
             </div>
         </div>
         <div class="grid grid-1-3">
@@ -23,12 +23,12 @@
             <div class="grid grid-2-3">
                 <div class="inner-block-padr">
                     <div class="text" itemprop="description">
-                        <p id="vacancy-description">@Model.ShortDescription</p>
+                        <p id="vacancy-description">@Model.NewVacancyViewModel.ShortDescription</p>
                     </div>
                 </div>
             </div>
             <div class="grid grid-1-3">
-                <p id="vacancy-closing-date" class="copy-16">Closing date: @Model.ClosingDate.Value.ToFriendlyClosingToday()</p>
+                <p id="vacancy-closing-date" class="copy-16">Closing date: @Model.VacancySummaryViewModel.ClosingDate.Date.ToFriendlyClosingToday()</p>
             </div>
         </section>
         <section class="section-border grid-wrapper" id="vacancy-info">
@@ -37,19 +37,19 @@
                 <div class="inner-block-padr">
 
                     <h3 class="bold-small">
-                        @Model.WageUnitDisplayText wage <i class="fa fa-check the-icon" style="color: green;"></i>
+                        @Model.VacancySummaryViewModel.WageUnitDisplayText wage <i class="fa fa-check the-icon" style="color: green;"></i>
                     </h3>
                     
-                    <p id="vacancy-wage">@Model.Wage</p>
+                    <p id="vacancy-wage">@Model.VacancySummaryViewModel.Wage</p>
 
                     <h3 class="bold-small">Working week <i class="fa fa-check the-icon" style="color: green;"></i></h3>
-                    <p id="vacancy-working-week" itemprop="workHours">@Model.WorkingWeek<br/>Total hours per week: @Model.HoursPerWeek</p>
+                    <p id="vacancy-working-week" itemprop="workHours">@Model.VacancySummaryViewModel.WorkingWeek<br/>Total hours per week: @Model.VacancySummaryViewModel.HoursPerWeek</p>
                     <h3 class="bold-small">Apprenticeship duration <i class="fa fa-check the-icon" style="color: green;"></i></h3>
-                    <p id="vacancy-expected-duration">@Model.Duration @Model.DurationTypeDisplayText</p>
+                    <p id="vacancy-expected-duration">@Model.VacancySummaryViewModel.Duration @Model.VacancySummaryViewModel.DurationTypeDisplayText</p>
                     <h3 class="bold-small">Possible start date</h3>
-                    <p id="vacancy-start-date">@Html.DisplayFor(m => Model.PossibleStartDate)</p>
+                    <p id="vacancy-start-date">@Html.DisplayFor(m => Model.VacancySummaryViewModel.PossibleStartDate.Date)</p>
                     <h3 class="bold-small">Apprenticeship level</h3>
-                    <p id="vacancy-type" itemprop="employmentType">@Model.ApprenticeshipLevel Level Apprenticeship</p>
+                    <p id="vacancy-type" itemprop="employmentType">@Model.NewVacancyViewModel.ApprenticeshipLevel Level Apprenticeship</p>
 
                     <h3 class="bold-small">Reference number</h3>
                     <p id="vacancy-reference-id">@Model.VacancyReferenceNumber</p>
@@ -57,7 +57,7 @@
             </div>
             <div class="grid grid-2-3">
                 <div class="text" itemprop="responsibilities">
-                    <p id="vacancy-full-descrpition">@Html.Raw(Model.LongDescription)</p>
+                    <p id="vacancy-full-descrpition">@Html.Raw(Model.VacancySummaryViewModel.LongDescription)</p>
                 </div>
             </div>
 
@@ -67,20 +67,20 @@
             <div class="grid grid-1-2">
                 <div class="inner-block-padr">
                     <div class="text">
-                        @if (!string.IsNullOrWhiteSpace(Model.DesiredSkills))
+                        @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.DesiredSkills))
                         {
                             <h3 class="heading-small">Desired skills</h3>
-                            <p id="vacancy-skills-required" itemprop="skills">@Html.Raw(Model.DesiredSkills)</p>
+                            <p id="vacancy-skills-required" itemprop="skills">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.DesiredSkills)</p>
                         }
-                        @if (!string.IsNullOrWhiteSpace(Model.PersonalQualities))
+                        @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.PersonalQualities))
                         {
                             <h3 class="heading-small">Personal qualities</h3>
-                            <p id="vacancy-qualities-required" itemprop="qualities">@Html.Raw(Model.PersonalQualities)</p>
+                            <p id="vacancy-qualities-required" itemprop="qualities">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.PersonalQualities)</p>
                         }
-                        @if (!string.IsNullOrWhiteSpace(Model.DesiredQualifications))
+                        @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.DesiredQualifications))
                         {
                             <h3 class="heading-small">Qualifications required</h3>
-                            <p id="vacancy-qualifications-required" itemprop="qualifications">@Html.Raw(Model.DesiredQualifications)</p>
+                            <p id="vacancy-qualifications-required" itemprop="qualifications">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.DesiredQualifications)</p>
                         }
 
                     </div>
@@ -88,15 +88,15 @@
             </div>
             <div class="grid grid-1-2">
                 <div class="text">
-                    @if (!string.IsNullOrWhiteSpace(Model.FutureProspects))
+                    @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.FutureProspects))
                     {
                         <h3 class="heading-small">Future prospects</h3>
-                        <p id="vacancy-future-prospects" itemprop="incentives">@Html.Raw(Model.FutureProspects)</p>
+                        <p id="vacancy-future-prospects" itemprop="incentives">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.FutureProspects)</p>
                     }
-                    @if (!string.IsNullOrWhiteSpace(Model.ThingsToConsider))
+                    @if (!string.IsNullOrWhiteSpace(Model.VacancyRequirementsProspectsViewModel.ThingsToConsider))
                     {
                         <h3 class="heading-small">Things to consider</h3>
-                        <p id="vacancy-reality-check" itemprop="incentives">@Html.Raw(Model.ThingsToConsider)</p>
+                        <p id="vacancy-reality-check" itemprop="incentives">@Html.Raw(Model.VacancyRequirementsProspectsViewModel.ThingsToConsider)</p>
                     }
                 </div>
             </div>
@@ -107,7 +107,7 @@
                 <div class="grid grid-2-3">
                     <div class="inner-block-padr">
                         <div class="text">
-                            <p id="vacancy-employer-description">@Html.Raw(Model.ProviderSiteEmployerLink.Description)</p>
+                            <p id="vacancy-employer-description">@Html.Raw(Model.NewVacancyViewModel.ProviderSiteEmployerLink.Description)</p>
                         </div>
                     </div>
                 </div>
@@ -117,24 +117,24 @@
                     <div class="inner-block-padr">
                         <div class="text">
                             <h3 class="bold-small">Employer</h3>
-                            <p id="vacancy-employer-name" class="@(string.IsNullOrEmpty(Model.ProviderSiteEmployerLink.WebsiteUrl) ? "no-btm-margin" : "")">@Model.ProviderSiteEmployerLink.Employer.Name</p>
-                            @if (string.IsNullOrEmpty(Model.ProviderSiteEmployerLink.WebsiteUrl))
+                            <p id="vacancy-employer-name" class="@(string.IsNullOrEmpty(Model.NewVacancyViewModel.ProviderSiteEmployerLink.WebsiteUrl) ? "no-btm-margin" : "")">@Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Name</p>
+                            @if (string.IsNullOrEmpty(Model.NewVacancyViewModel.ProviderSiteEmployerLink.WebsiteUrl))
                             {
                                 <p>
-                                    <a itemprop="url" href="@Model.ProviderSiteEmployerLink.WebsiteUrl"
+                                    <a itemprop="url" href="@Model.NewVacancyViewModel.ProviderSiteEmployerLink.WebsiteUrl"
                                        id="vacancy-employer-website"
                                        target="_blank"
-                                       title="@Model.ProviderSiteEmployerLink.Employer.Name Website" rel="external">@Model.ProviderSiteEmployerLink.WebsiteUrl</a>
+                                       title="@Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Name Website" rel="external">@Model.NewVacancyViewModel.ProviderSiteEmployerLink.WebsiteUrl</a>
                                 </p>
                             }
                             <div id="vacancy-address" itemscope itemtype="http://schema.org/PostalAddress">
                                 <h3 class="bold-small">Address</h3>
                                 <div itemprop="address">
-                                    <p class="small-btm-margin" itemprop="streetAddress">@Model.ProviderSiteEmployerLink.Employer.Address.AddressLine1</p>
-                                    <p class="small-btm-margin" itemprop="streetAddress">@Model.ProviderSiteEmployerLink.Employer.Address.AddressLine2</p>
-                                    <p class="small-btm-margin" itemprop="addressLocality">@Model.ProviderSiteEmployerLink.Employer.Address.AddressLine3</p>
-                                    <p class="small-btm-margin" itemprop="addressRegion">@Model.ProviderSiteEmployerLink.Employer.Address.AddressLine4</p>
-                                    <p class="small-btm-margin" itemprop="postalCode">@Model.ProviderSiteEmployerLink.Employer.Address.Postcode</p>
+                                    <p class="small-btm-margin" itemprop="streetAddress">@Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Address.AddressLine1</p>
+                                    <p class="small-btm-margin" itemprop="streetAddress">@Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Address.AddressLine2</p>
+                                    <p class="small-btm-margin" itemprop="addressLocality">@Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Address.AddressLine3</p>
+                                    <p class="small-btm-margin" itemprop="addressRegion">@Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Address.AddressLine4</p>
+                                    <p class="small-btm-margin" itemprop="postalCode">@Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Address.Postcode</p>
                                 </div>
                             </div>
                         </div>
@@ -143,25 +143,25 @@
                 <div class="grid grid-1-2 hide-print">
                     <div id="vacancy-map" class="ad-details__map">
                         <div class="map-overlay" onclick=" style.pointerEvents = 'none' "></div>
-                        <iframe width="700" height="250" title="Map of location" style="border: 0" src="https://www.google.com/maps/embed/v1/place?q=@Html.Raw(Model.ProviderSiteEmployerLink.Employer.Address.Postcode),+United+Kingdom&amp;key=AIzaSyCusA_0x4bJEjU-_gLOFiXMSBXKZYtvHz8"></iframe>
+                        <iframe width="700" height="250" title="Map of location" style="border: 0" src="https://www.google.com/maps/embed/v1/place?q=@Html.Raw(Model.NewVacancyViewModel.ProviderSiteEmployerLink.Employer.Address.Postcode),+United+Kingdom&amp;key=AIzaSyCusA_0x4bJEjU-_gLOFiXMSBXKZYtvHz8"></iframe>
                         <p class="nojs-notice">You must have JavaScript enabled to view a map of the location</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        @if (Model.OfflineVacancy)
+        @if (Model.NewVacancyViewModel.OfflineVacancy)
         {
             <section class="section-border" id="offline-vacancy" style="">
                 <h2 class="heading-large">Employer's application instructions</h2>
                 <div class="text">
                     <p id="application-instructions">
-                        @Model.OfflineApplicationInstructions
+                        @Model.NewVacancyViewModel.OfflineApplicationInstructions
                     </p>
                 </div>
                 <div class="form-group">
                     <p class="no-btm-margin">This apprenticeship requires you to apply through the employer's website.</p>
-                    <a id="external-employer-website" rel="external" href="@Model.OfflineApplicationUrl" target="_blank">@Model.OfflineApplicationUrl</a>
+                    <a id="external-employer-website" rel="external" href="@Model.NewVacancyViewModel.OfflineApplicationUrl" target="_blank">@Model.NewVacancyViewModel.OfflineApplicationUrl</a>
                     <i class="fa fa-check the-icon" style="color: green;"></i>
                 </div>
             </section>
