--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -29,7 +29,22 @@
                 </div>
             </div>
             <div class="grid grid-1-3">
-                <p id="vacancy-closing-date" class="copy-16">Closing date: @Model.VacancySummaryViewModel.ClosingDate.Date.ToFriendlyClosingToday()</p>
+                @if (ViewData.ModelState.HasWarningsFor("VacancySummaryViewModel.ClosingDate"))
+                {
+                   var message = ViewData.ModelState.WarningMessageFor("VacancySummaryViewModel.ClosingDate");
+                
+                    <p id="vacancy-closing-date" class="copy-16">
+                        Closing date: @Model.VacancySummaryViewModel.ClosingDate.Date.ToFriendlyClosingToday() 
+                        <i class="fa fa-flag the-icon" style="color: red;" title="@message"></i>
+                    </p>
+                }
+                else
+                {
+                <p id="vacancy-closing-date" class="copy-16">
+                    Closing date: @Model.VacancySummaryViewModel.ClosingDate.Date.ToFriendlyClosingToday() 
+                    <i class="fa fa-check the-icon" style="color: green;"></i>
+                </p>
+                }
             </div>
         </section>
         <section class="section-border grid-wrapper" id="vacancy-info">
@@ -60,7 +75,21 @@
                     
                     <p id="vacancy-expected-duration">@Model.VacancySummaryViewModel.Duration @Model.VacancySummaryViewModel.DurationTypeDisplayText</p>
                     <h3 class="bold-small">Possible start date</h3>
-                    <p id="vacancy-start-date">@Html.DisplayFor(m => Model.VacancySummaryViewModel.PossibleStartDate.Date)</p>
+                    @if (ViewData.ModelState.HasWarningsFor("VacancySummaryViewModel.PossibleStartDate"))
+                    {
+                        var message = ViewData.ModelState.WarningMessageFor("VacancySummaryViewModel.PossibleStartDate");
+                        <p id="vacancy-start-date">@Html.DisplayFor(m => Model.VacancySummaryViewModel.PossibleStartDate.Date)
+                            <i class="fa fa-flag the-icon" style="color: red;" title="@message"></i>
+                        </p>
+                    }
+                    else
+                    {
+                        <p id="vacancy-start-date">
+                            @Html.DisplayFor(m => Model.VacancySummaryViewModel.PossibleStartDate.Date)
+                            <i class="fa fa-check the-icon" style="color: green;"></i>
+                        </p>
+                    }
+                    
                     <h3 class="bold-small">Apprenticeship level</h3>
                     <p id="vacancy-type" itemprop="employmentType">@Model.NewVacancyViewModel.ApprenticeshipLevel Level Apprenticeship</p>
 
