--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
@@ -41,7 +41,7 @@
                     </label>
                     @* ReSharper disable once Html.IdNotResolved *@
                     <label for="apprenticeship-minimum-wage" class="block-label">
-                        @Html.RadioButtonFor(model => model.WageType, WageType.NationalMinimumWage, new { id = "apprenticeship-minimum-wage", aria_controls = "wage-type-panel" })
+                        @Html.RadioButtonFor(model => model.WageType, WageType.ApprenticeshipMinimumWage, new { id = "apprenticeship-minimum-wage", aria_controls = "wage-type-panel" })
                         National Minimum Wage for apprentices
                     </label>
                 </div>
