recruit site - bugfix - display wage on preview page

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -56,7 +56,7 @@
                         @Model.VacancySummaryViewModel.WageUnitDisplayText wage <i class="fa fa-check the-icon" style="color: green;"></i>
                     </h3>
                     
-                    <p id="vacancy-wage">£@Model.VacancySummaryViewModel.Wage</p>
+                    <p id="vacancy-wage">@Model.VacancySummaryViewModel.WageDisplayText</p>
 
                     <h3 class="bold-small">Working week <i class="fa fa-check the-icon" style="color: green;"></i></h3>
                     <p id="vacancy-working-week" itemprop="workHours">@Model.VacancySummaryViewModel.WorkingWeek<br/>Total hours per week: @Model.VacancySummaryViewModel.HoursPerWeek
