Avoid displaying client side errors as warnings

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/ValidationSummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/ValidationSummary.cshtml
@@ -33,7 +33,7 @@
     var hasWarnings = Html.ViewData.ModelState.HasWarnings();
 }
 
-<div id="validation-summary-warnings" class='@(hasWarnings ? "validation-summary-warnings" : "validation-summary-valid") panel panel-warning' data-valmsg-summary="true">
+<div id="validation-summary-warnings" class='@(hasWarnings ? "validation-summary-warnings" : "validation-summary-valid") panel panel-warning'>
     <div class="panel-body">
         <ul>
             @foreach (var modelKey in Model.Keys)
